Fix featured image alignment on blog post previews

--- a/assets/css/customisations.scss
+++ b/assets/css/customisations.scss
@@ -360,12 +360,21 @@ iframe {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    overflow: hidden;
 }
 
 .blog-image img {
-    width: 100%;
-    margin-top: auto !important;
-    margin-bottom: auto;
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    object-fit: contain;
 }
 
 .blog-excerpt {
